[package]
name = "epochfs"
version = "0.1.2"
edition = "2021"
description = "EpochFS is a versioned cloud file system with git-like branching, transaction support."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
blake3 = "1.5.5"
futures = "0.3.31"
opendal = "0.51.2"
prost = "0.13.4"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
uuid = { version = "1.13.1", features = ["v7"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["full"] }
opendal = {version = "0.51.2", features = ["services-fs"]}

[build-dependencies]
prost-build = "0.13.4"
