[package]
name = "epochfs"
version = "0.1.5"
edition = "2021"
description = "EpochFS is a versioned cloud file system with git-like branching, transaction support."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
blake3 = "1.5.5"
futures = "0.3.31"
opendal = "0.51.2"
uuid = { version = "1.13.1", features = ["v7"] }
log = "0.4.25"
bincode = "2.0.1"
bytes = "1"
chrono = "0.4.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["full"] }
opendal = { version = "0.51.2", features = ["services-fs"] }

[build-dependencies]
prost-build = "0.13.4"
